--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
         Minecraft Youtuber Proboiz 95
       </p>
       <iframe 
-        width="100%" 
+        width="400" 
         height="200" 
         src="https://www.youtube.com/embed/9kETVJbETOg" 
         title="YouTube video player" 
-        frameborder="0" 
+        style="border: none;"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen>
       </iframe>
     </main>
     <section class="a">
       <a href="https://youtube.com/@proboiz95?si=Nw4euRDyFDhS3ZF2">
-        <img src="proboiz_95.jpg" width="50px">
+        <img src="proboiz_95.jpg" alt="This is a picture with link" width="50">
       </a>
       <h2>
         Proboiz 95
