--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
       <p class="b">
         Minecraft Youtuber Proboiz 95
       </p>
-      <iframe 
-        width="400" 
-        height="200" 
-        src="https://www.youtube.com/embed/9kETVJbETOg" 
-        title="YouTube video player" 
-        style="border: none;"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-      </iframe>
+      <div>
+        <iframe 
+         width="400" 
+         height="200" 
+         src="https://www.youtube.com/embed/9kETVJbETOg" 
+         title="YouTube video player" 
+         style="border: none;"
+         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+         allowfullscreen>
+        </iframe>
+      </div>
     </main>
     <section class="a">
       <a href="https://youtube.com/@proboiz95?si=Nw4euRDyFDhS3ZF2">
